--- a/freeCodeCamp/ResponsiveWebProjects/TributePage.html
+++ b/freeCodeCamp/ResponsiveWebProjects/TributePage.html
@@ -46,11 +46,11 @@
     <div id="title">
         <h1>My Teaching Career</h1>
     </div>
-    <figure class="container" id="img-div">
+    <div class="container" id="img-div">
         <img id="image" src="https://images.pexels.com/photos/5088022/pexels-photo-5088022.jpeg" alt="school supplies">
         <br>
         <figcaption id="img-caption"><em>an iPad, artwork, paperclips, erasers, and scissors</em></figcaption>
-    </figure>
+    </div>
     <div id="tribute-info">
         <p>Teaching was always my dream. Well, once I realized that enjoying a good argument isn't enought of a reason to become a lawyer. 
             I've been teaching since 2003 and never saw myself retiring. COVID has changed that.</p>
