--- a/freeCodeCamp/ResponsiveWebProjects/LandingPage.html
+++ b/freeCodeCamp/ResponsiveWebProjects/LandingPage.html
@@ -7,22 +7,20 @@
         top: 0;
         width: 100%;
         background-color: #333;
-        display: inline;
+        vertical-align: middle;
+        font-size: 25px;
+        height: 70px;
     }
 
     ul {
         list-style-type: none;
-        margin: 0;
-        padding: 0;
+        margin: 5px 5px 0px 5px;
+        padding: 5px;
         overflow: hidden;
     }
 
-    li {
-        float: left;
-    }
-
     li a {
-        display: block;
+        float: left;
         color: white;
         text-align: center;
         padding: 14px 16px;
@@ -34,14 +32,17 @@
     }
 
     #header-img {
-        <<!--align to the right of the nav bar-->>
+        width: 50px;
+        height: 50px;
+        margin: 10px;
+        float: left
     }
 </style>
 
 </head>
 
 <header id="header"> 
-<img id="header-img" src="https://webtoolfeed.files.wordpress.com/2012/10/zombie_barbie.jpg">
+<img id="header-img" src="https://webtoolfeed.files.wordpress.com/2012/10/zombie_barbie.jpg" alt="logo">
 <nav id="nav-bar">
     <ul>
         <li class="nav-link"><a href="#">Link1</a></li>
