--- a/freeCodeCamp/ResponsiveWebProjects/LandingPage.html
+++ b/freeCodeCamp/ResponsiveWebProjects/LandingPage.html
@@ -53,6 +53,12 @@
         display: flex;
         flex-direction: row;
     }
+    @media (max-width: 400px) {
+        .container {
+            display: flex;
+            flex-direction: column
+        }
+    }
     p {
         margin: 10px;
         padding-left: 10px;
