--- a/freeCodeCamp/ResponsiveWebProjects/LandingPage.html
+++ b/freeCodeCamp/ResponsiveWebProjects/LandingPage.html
@@ -125,10 +125,10 @@
 </body>
 
 <footer>
-<form id="form" action="https://www.freecodecamp.org/email-submit">
-    <label for="email">Sign up for the mailing list:</label>
+<form id="form" action="https://www.freecodecamp.com/email-submit">
+    <label for="email" id="email-label">Sign up for the mailing list:</label>
     <br>
-    <input id="email" type="email" placeholder="email address">
+    <input id="email" type="email" name="email" placeholder="email address">
     <input id="submit" type="submit">
 </form>
 </footer>
