--- a/freeCodeCamp/ResponsiveWebProjects/techdoc.html
+++ b/freeCodeCamp/ResponsiveWebProjects/techdoc.html
@@ -4,33 +4,36 @@
 
 </head>
 
+<nav id="navbar">
+  <header>topic</header>
+  <ul>
+    <li><a class="nav-link" href="#">Link1</a></li>
+    <li><a class="nav-link" href="#">Link2</a></li>
+    <li><a class="nav-link" href="#">Link3</a></li>
+    <li><a class="nav-link" href="#">Link4</a></li>
+    <li><a class="nav-link" href="#">Link5</a></li>
+  </ul>
+</nav>
 <main id="main-doc">
 
 <section id="section1" class="main-section">
-<header>
-
-</header>
+<header>Topic 1</header>
 
 </section>
 <section id="section2" class="main-section">
-<header>
-
-</header>
+<header> Topic 2</header>
 
 </section>
 <section id="section3" class="main-section">
-<header>
-
-</header>
+<header>Topic 3</header>
 
 </section>
 <section id="section4" class="main-section">
+<header>Topic 4</header>
 
-</section>
+ </section>
 <section id="section5" class="main-section">
-<header>
-
-</header>
+<header>Topic 5</header>
 
 </section>
 </main>
