--- a/freeCodeCamp/ResponsiveWebProjects/techdoc.html
+++ b/freeCodeCamp/ResponsiveWebProjects/techdoc.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <style>
+#navbar {
+  width: 80px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: black;
+  color: white;
+  overflow-x: hidden;
+  padding: 20px;                 
+  font-size: 25px;
+  Margin: 10px;
+}
+.nav-link a {
+  padding: 20px;
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+  display: block;
+}
+.nav-link a:hover {
+  color: #000;
+}
+#main-doc {
+  margin-left: 140px;
+  padding: 0 10px;
+}
+@media screen and (max-height: 450px) {
+  .nav-link {padding-top: 15px;}
+  .nav-link a {font-size: 18px;}
+}
+</style
 </head>
-
 <nav id="navbar">
-  <header>topic</header>
-  <ul>
-    <li><a class="nav-link" href="#">Link1</a></li>
-    <li><a class="nav-link" href="#">Link2</a></li>
-    <li><a class="nav-link" href="#">Link3</a></li>
-    <li><a class="nav-link" href="#">Link4</a></li>
-    <li><a class="nav-link" href="#">Link5</a></li>
-  </ul>
+  <header>TOPIC</header>
+  <a class="nav-link" href="#">Link1</a>
+  <a class="nav-link" href="#">Link2</a>
+  <a class="nav-link" href="#">Link3</a>
+  <a class="nav-link" href="#">Link4</a>
+  <a class="nav-link" href="#">Link5</a>
 </nav>
 <main id="main-doc">
 
@@ -31,7 +60,7 @@
 <section id="section4" class="main-section">
 <header>Topic 4</header>
 
- </section>
+</section>
 <section id="section5" class="main-section">
 <header>Topic 5</header>
 
