--- a/freeCodeCamp/ResponsiveWebProjects/techdoc.html
+++ b/freeCodeCamp/ResponsiveWebProjects/techdoc.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en"
 <html>
 <head>
   <style>
@@ -14,16 +15,17 @@
   padding: 20px;                 
   font-size: 25px;
   Margin: 10px;
+  text-align: center;
 }
-.nav-link a {
-  padding: 20px;
+.nav-link {
+  padding: 10px;
   text-decoration: none;
   font-size: 25px;
   color: white;
   display: block;
 }
-.nav-link a:hover {
-  color: #000;
+.nav-link:hover {
+  background-color: teal;
 }
 #main-doc {
   margin-left: 140px;
