--- a/freeCodeCamp/ResponsiveWebProjects/techdoc.html
+++ b/freeCodeCamp/ResponsiveWebProjects/techdoc.html
@@ -4,13 +4,12 @@
 <head>
   <style>
 #navbar {
-  width: 80px;
+  width: 150px;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
   background-color: black;
-  color: white;
   overflow-x: hidden;
   padding: 20px;                 
   font-size: 25px;
@@ -28,44 +27,66 @@
   background-color: teal;
 }
 #main-doc {
-  margin-left: 140px;
+  margin-left: 200px;
   padding: 0 10px;
 }
 @media screen and (max-height: 450px) {
   .nav-link {padding-top: 15px;}
   .nav-link a {font-size: 18px;}
 }
+header {
+  color: teal;
+  font-weight: bold;
+}
+.main-section {
+  font-size: 21px;
+  margin: 10px;
+}
+h1 {
+  text-align: center;
+}
 </style
 </head>
 <nav id="navbar">
-  <header>TOPIC</header>
-  <a class="nav-link" href="#">Link1</a>
-  <a class="nav-link" href="#">Link2</a>
-  <a class="nav-link" href="#">Link3</a>
-  <a class="nav-link" href="#">Link4</a>
-  <a class="nav-link" href="#">Link5</a>
+  <header>RTAF</header>
+  <a class="nav-link" href="#Introduction">Introduction</a>
+  <a class="nav-link" href="#Purpose">Purpose</a>
+  <a class="nav-link" href="#Materials">Materials</a>
+  <a class="nav-link" href="#Research_Design">Research Design</a>
+  <a class="nav-link" href="#Significance">Significance</a>
 </nav>
 <main id="main-doc">
-
-<section id="section1" class="main-section">
-<header>Topic 1</header>
-
+<h1>Perceptions of Preservice Teachers on Gender Inclusive Practices</h1>
+<section id="Introduction" class="main-section">
+<header>Introduction</header>
+<p>Many environments, including schools, are heteronormative or built on the assumption that feminine and masculine heterosexuality is normal and other identifications or orientations are other (Jong, 2015).   Stressors from feeling a lack of belonging in a heteronormative environment can lead to bullying and poor mental health.  Gay, lesbian, and bisexual students are more likely to be bullied at school and have greater incidence of both suicidal ideation and suicide attempts (Kent et al., 2018).  Because school is a constant part of most young persons’ lives, how gender is addressed in school has a lasting impact. In addition to decreased academic outcomes in the present, through a cumulative effect of stressors, gender and sexually diverse students are at risk in adulthood of increased drug use, cardiovascular disease, and poor mental health (Birkett, Russell, & Corliss, 2014; Caceres et al., 2017). While gender socialization also occurs at home beginning in infancy and across all other environments, teachers and other students play a large role in reinforcing concepts of gender normalcy and thus impact student outcomes both now and in the future.</p>
 </section>
-<section id="section2" class="main-section">
-<header> Topic 2</header>
-
+<section id="Purpose" class="main-section">
+<header>Purpose</header>
+<p>The purpose of this study is to examine the experiences and perceptions of preservice secondary education teacher candidates enrolled in student teaching placements with regards to gender diversity and their preparedness to address related issues.</p>
+<ol>
+<li>What importance do preservice teachers in the secondary setting assign to gender inclusivity in the classroom?</li>
+<li>How do preservice teachers in the secondary setting define gender inclusive practices?</li>
+<li>How prepared do preservice teachers in the secondary setting perceive themselves to address gender inclusivity in the classroom?</li>
+</ol>
 </section>
-<section id="section3" class="main-section">
-<header>Topic 3</header>
-
+<section id="Materials" class="main-section">
+<header>Materials</header>
+<ul>
+<li>Qualtrics</li>
+<li>Computer with access to Zoom</li>
+<li>Interview protocol and questions</li>
+<li>Pencil, paper, and other note-taking materials</li>
+<li>Qualitative Data Analysis Software (QDAS)</li>
+</ul>
 </section>
-<section id="section4" class="main-section">
-<header>Topic 4</header>
-
+<section id="Research_Design" class="main-section">
+<header>Research Design</header>
+<p>This study is phenomenological in design in order to examine the perspective of preservice teachers.  As the study of lived experience, phenomenology will allow for the exploration of how preservice teachers experience the preparation for and handling of gender issues (Adams & Manen, 2008). Preservice teachers in their student teaching placements will be invited to reflect on gender inclusive practices from their coursework and as they are applicable to their classroom experience.  Because a phenomenological study allows for a deep exploration of a specific lived experience, this design is well suited to examine this issue and provide insight as to recommendations for the preparation of future teachers with regard to gender diversity (Eberle, 2014). </p>
 </section>
-<section id="section5" class="main-section">
-<header>Topic 5</header>
-
+<section id="Significance" class="main-section">
+<header>Significance</header>
+<p>The school environment has a lasting effect on the development of all students.  Students identifying as sexually or gender diverse are at greater risk of negative academic and health outcomes partially due to experiences while in school.  Through training to avoid gender stigma and use gender supportive practices, future teachers can aid in more positive outcomes for gender and sexually diverse students.  This phenomenological study will explore the current views and preparation of preservice teachers on gender inclusivity so that this information may be used to review and revise current teacher education programs.  By reflecting on current preparation practices and their results, teacher educators will better be able to include gender and sexual diversity in preservice teacher training. </p>
 </section>
 </main>
 
