--- a/freeCodeCamp/ResponsiveWebProjects/techdoc.html
+++ b/freeCodeCamp/ResponsiveWebProjects/techdoc.html
@@ -44,6 +44,8 @@ header {
 }
 h1 {
   text-align: center;
+  background-color: rgb(166, 240, 240);
+
 }
 </style
 </head>
@@ -54,6 +56,7 @@ h1 {
   <a class="nav-link" href="#Materials">Materials</a>
   <a class="nav-link" href="#Research_Design">Research Design</a>
   <a class="nav-link" href="#Significance">Significance</a>
+  <a class="nav-link" href="#References">References</a>
 </nav>
 <main id="main-doc">
 <h1>Perceptions of Preservice Teachers on Gender Inclusive Practices</h1>
@@ -87,6 +90,15 @@ h1 {
 <section id="Significance" class="main-section">
 <header>Significance</header>
 <p>The school environment has a lasting effect on the development of all students.  Students identifying as sexually or gender diverse are at greater risk of negative academic and health outcomes partially due to experiences while in school.  Through training to avoid gender stigma and use gender supportive practices, future teachers can aid in more positive outcomes for gender and sexually diverse students.  This phenomenological study will explore the current views and preparation of preservice teachers on gender inclusivity so that this information may be used to review and revise current teacher education programs.  By reflecting on current preparation practices and their results, teacher educators will better be able to include gender and sexual diversity in preservice teacher training. </p>
+</section>
+<section id="References" class="main-section">
+<header>References</header>
+<p>Adams, C. & Manen, M. (2008). Phenomenology. In L. M. Given (Ed.), The SAGE encyclopedia of qualitative research methods (pp. 615-619). Thousand Oaks, CA: SAGE Publications, Inc. <code>10.4135/9781412963909.n317 </code> </p>
+<p>Birkett, M., Russell, S. T., & Corliss, H. L. (2014). Sexual-Orientation Disparities in School: The Mediational Role of Indicators of Victimization in Achievement and Truancy Because of Feeling Unsafe. American Journal of Public Health, 104(6), 1124-1128. </p>
+<p>Caceres, B. A., Brody, A., Luscombe, R. E., Primiano, J. E., Marusca, P., Sitts, E. M., & Chyun, D. (2017). A Systematic Review of Cardiovascular Disease in Sexual Minorities. American Journal of Public Health, 107(4), e13-e21. <code> doi:10.2105/AJPH.2016.303630 </code></p>
+<p>Eberle, T. (2014). Phenomenology as a research method. In U. Flick The SAGE handbook of qualitative data analysis (pp. 184-202). 55 City Road, London: SAGE Publications, Inc. <code> doi: 10.4135/9781446282243.n13 </code></p>
+<p>Jong, D. (2015). 'He wears pink leggings almost every day, and a pink sweatshirt....' how school social workers understand and respond to gender variance. Child & Adolescent Social Work Journal, 32(3), 247-255.<code> doi:10.1007/s10560-014-0355-3 </code></p>
+<p>Kent, C. K., Casey, C. G., Dott, M., Rutledge, T., F., Johnson, D., C., Landsdowne, C., B., . . . Yang, M. (2018). Youth Risk Behavior Surveillence - United States, 2017. Retrieved from Atlanta, Georgia: <code> https://www.cdc.gov/healthyyouth/data/yrbs/pdf/2017/ss6708.pdf </code></p>
 </section>
 </main>
 
