--- a/freeCodeCamp/ResponsiveWebProjects/portfolio.html
+++ b/freeCodeCamp/ResponsiveWebProjects/portfolio.html
@@ -3,19 +3,19 @@
 <head>
     <style>
 header {
-  width: 150px;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
   background-color: black;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 20px;                 
   font-size: 25px;
   Margin: 10px;
   text-align: center;
 }
 .nav-link {
+  float: left;
   padding: 10px;
   text-decoration: none;
   font-size: 25px;
@@ -26,8 +26,8 @@ header {
   background-color: teal;
 }
 body {
-    margin-left: 200px;
-    padding: 0 10px;
+    margin-top: 100px;
+    padding: 10px;
 }
     </style>
 </head>
@@ -35,6 +35,7 @@ body {
 <header>
     <nav id="navbar">
         <a class="nav-link" href="#projects">Projects</a>
+        <a class="nav-link" href="#find-me">Find Me</a>
     </nav>
 </header>
 
@@ -49,7 +50,9 @@ body {
     <div class="project-tile"></div>
 </div>
 </body>
-
+<div id="find-me">
+    <h1>Find Me</h1>
+</div>
 <footer></footer>
 
 </html>
